# IsingRBM

./: LICENSE  Manifest.toml  Project.toml  README.md  analyse.jl  fit.jl  ising.jl  ising_magnetization.jld2  magnetization.jld2  model.jld2  plots_ising.jl  plots_ising.jmd  pyproject.toml  rbm.py  rbm_magnetization.jld2  weave.jl
scripts/: analyse.jl  fit.jl  full.jl  ising.jl  plots_ising.jl  rbm.jl
