[tool.poetry]
name = "boltzmannmachines"
version = "0.1.0"
description = ""
authors = ["edwinb-ai <developeredwin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.2.1"
numpy = "^1.18.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
